API function Author Login
